--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -757,9 +757,7 @@ title = "१"
 
 इति । अत्रासमीचीनपराङ्मुखैरिति मोहादिविरोधिविवेकादिपात्रसूचनायुक्तं सभानुरञ्जनं नाम प्ररोचना कथितम् । एषेति पुरोवर्तिपरामर्शात् देश- लक्षणं प्ररोचनाङ्गमुक्तम् ॥ ४ ॥
 
-तदहमिति । विद्यास्थानानि; अष्टादश विद्याः । उपलम्भनीम् ; संपादिकाम् । पारम्यम्; परत्वम् । कुक्षिंभरीम् ; भक्षिकां, निवर्तिकामिति प्रभावली
-
-दैवतैरिव स्थितैः अमीभिः महद्भिः परिषत् गोष्ठी संप्रतिभासते । तत उदासितुमशक्यमिति भावः ॥ ४ ॥
+तदहमिति । विद्यास्थानानि; अष्टादश विद्याः । उपलम्भनीम् ; संपादिकाम् । पारम्यम्; परत्वम् । कुक्षिंभरीम् ; भक्षिकां, निवर्तिकामिति 
 
 तर्हि कि कर्तव्यमित्यत्राह - तदहमिति । तत्; तस्मात् | आदिमां देवतां हयग्रीवमूर्ति भगवन्तमभिगच्छामि, उपास इत्यर्थः । कीदृशीम् — अशेषेति । अशेषाणा विद्यास्थानसंपदाम् ; " अङ्गानि वेदाश्चत्वारो मीमांसा न्यायविस्तरः । पुराणं धर्मशास्त्रं च विद्या ह्येताश्चतुर्दश ॥ ” आयुर्वेदाद्युपवेदाश्चत्वारश्चेत्यष्टादश विद्यास्थानानि । उपलम्भनीम्; उपलम्भस्थानभूताम् ; संप्रदायप्रवर्तनीमित्यर्थः । एवंच तत्तद्विद्योपलम्भनार्थ तत्तदवतारपरिग्रहे बहुविधजन्मपरिग्रहे जीवात्मन इव
 </details>
@@ -1423,6 +1421,11 @@ title = "१"
 ये लोकानिह वञ्चयन्ति[^31] विरलोदञ्चचन्महः कञ्चुका- 
 
 स्ते तिष्ठन्तु महद्गृहेषु मणयः किं तैरिदं चिन्त्यताम् । 
+
+श्रीवत्सप्रतिवेशदीपरुचिना सार्धं किमाभाष्यते
+
+पद्मोल्लासनदर्पणेन मणिना प्रत्नेषु रत्नेष्वपि ॥ १० ॥
+
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1434,6 +1437,10 @@ title = "१"
 ये लोकानिह वञ्चयन्ति[^31] विरलोदञ्चचन्महः कञ्चुका- 
 
 स्ते तिष्ठन्तु महद्गृहेषु मणयः किं तैरिदं चिन्त्यताम् । 
+
+श्रीवत्सप्रतिवेशदीपरुचिना सार्धं किमाभाष्यते
+
+पद्मोल्लासनदर्पणेन मणिना प्रत्नेषु रत्नेष्वपि ॥ १० ॥
 </details>
 
 
@@ -1457,9 +1464,6 @@ title = "१"
 
 एवं प्रयोगस्यावयवशोभामुक्त्वा समुदायशोभामाह – अमुष्येत्यादि । अमुष्य; नाटकस्य । अतिशयोक्तौ ; अतिशयवर्णने । कति कति न संभ- वन्ति ; बहवः संभवन्तीत्यर्थः । किमिति ; पुरुषोत्तमस्य पाणिपद्मं परिष्कृतं येन स पाञ्चजन्यः कि ते भवन्तीति शेषः । उक्तमेवार्थं भङ्गयन्तरेणाह - किंचेत्यादि । ये लोकानिति । ये मणयः विरलं स्वल्प यथा तथोदञ्च - न्महांस्येव कञ्चुकं संवरणकोशः येषा ते; अल्पतेजस इत्यर्थः । इह जगति जनान् मूढान् वञ्चयन्ति ; 'अयमेव श्लाघ्यः' इति स्वविषयव्यामोहनं जनयन्ति ; ते महतां वञ्चकानां गृहेष्वेव तिष्ठन्तु । तैः कि प्रयोजनम् ? इदं वक्ष्यमाणं
 
-श्रीवत्सप्रतिवेशदीपरुचिना सार्धं किमाभाष्यते 
-
-पद्मोल्लासनदर्पणेन मणिना प्रत्नेषु रत्नेष्वपि ॥ १० ॥
 </details>
 
 
@@ -7446,6 +7450,10 @@ X१४५
 बहुलदुरितद्वारे ब्राह्मे[^142] पुरे परसंमत[^143]- 
 
 स्वमतिघटितस्वातन्त्र्यत्वादयन्त्रितचेष्टितः ।
+
+विषमसचिवैः स्वे स्वे कार्ये विगृह्य विकृष्यते
+
+नरपतिरिव क्षीबो नानाविधैरयमिन्द्रियैः ॥ ७२ ॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -7461,6 +7469,11 @@ X१४५
 बहुलदुरितद्वारे ब्राह्मे[^142] पुरे परसंमत[^143]- 
 
 स्वमतिघटितस्वातन्त्र्यत्वादयन्त्रितचेष्टितः ।
+
+
+विषमसचिवैः स्वे स्वे कार्ये विगृह्य विकृष्यते
+
+नरपतिरिव क्षीबो नानाविधैरयमिन्द्रियैः ॥ ७२ ॥
 </details>
 
 
