--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -938,34 +938,53 @@ X२३
 संदितम्; लग्मम् । उभयम्; एतस्येत्यादि कर्कशेत्यादि च । एकतानम् अनन्यवृत्ति । निबन्धारम् ग्रन्थकर्तारम् । प्रथमपर्यनु-  
 योगस्योत्तरमाह -मन्विति । स्वयमुदये मन्वादय एव निदर्शनमिति भावः । विन्ध्याचलवत् विकटाः विस्तृता दुष्प्रवेशा वा । सन्ध्या- नटस्य रुद्रस्य या जटाः, तासु परिभ्रान्ता ॥ १६ ॥
 </details>
+
 <details open><summary>मूलम् - १७</summary>
 
 अन्यदपि निध्यायतु भवती-
 
 [^44]गम्भीरभीषणगतिर्गिरिखण्डनादौ
 
-चूडापदं पशुपतेरपि घूर्णयन्ती ।  
+चूडापदं पशुपतेरपि घूर्णयन्ती । 
 स्वादुप्रसन्नसुभगानि[^45] वसुंधरायां
 
 स्रोतांसि दर्शयति किं न सुरस्रवन्ती ॥ १७ ॥
+</details>
+
+<details><summary>प्रभाविलासः - १७</summary>
+
+द्वितीयस्योत्तरमाह--- गम्भीरेति । स्रोतांसीति बहुवचनन 
+
+सा तत्र पतिता दिक्षु चतुर्धा प्रतिपद्यते ।  
+सीता चालकनन्दा च वङ्क्षुर्भद्रेति वै क्रमात् ॥
+
+
+इति श्रीविष्णुपुराणोक्तिः स्मारिता । एवं प्रश्नोत्तरपरंपरारूपमुद्धात्यकं नाम वीथ्यङ्गमुक्तम् । तदुक्तं विद्यानाथेन -
+
+
+वीथ्यङ्गान्यामुखाङ्गत्वादुच्यन्तेऽत्र स्वभावतः ।  
+उद्घात्य कावलगिने प्रपञ्चत्रिगते छलम् ॥  
+वाक्केत्यधिबले गण्डमवस्यन्दितनालिके ।  
+असत्प्रलापव्याहारमृदवानि त्रयोदश ॥ १७ ॥ 
+
 </details>
 
 
 <details><summary>प्रभावलिः - १७</summary>
 
 द्वितीयां शङ्कां निवारयति - अन्यदपीति । अन्यदपि ; द्वितीयशङ्कायाः परिहाररूपमन्यदपीदं निध्यायतु पश्यतु । गम्भीरेत्यादि । गिरिखण्डनादौ ;
-गिरीणां हिमवदादीना खण्डनादौ । आदिशब्दादभिघातीलवनादि गृह्यते । तत्र विषये गम्भीरा अगाधा भीपणा भयंकरा गतिर्यस्याः सा । पशुपतेः चूडा- पदं शिरोऽपि भ्रामयन्ती गङ्गा । वसुंधरायां; भूमौ स्वादूनि प्रसन्नानि सुभगानि च स्रोतांसि प्रवाहान् कि न दर्शयति दर्शयत्येव । तथा दुर्वादिखण्डनादौ तन्मनोभ्रमणे च कर्कशतरवाग्वृत्तेरप्यस्य कवेर्नाटकविषये ललिता वाकू प्रसन्तीति भावः ॥ १७ ॥
+गिरीणां हिमवदादीनां खण्डनादौ । आदिशब्दादभिघातोत्प्लवनादि गृह्यते । तत्र विषये गम्भीरा अगाधा भीपणा भयंकरा गतिर्यस्याः सा । पशुपतेः चूडा- पदं शिरोऽपि भ्रामयन्ती गङ्गा । वसुंधरायां; भूमौ स्वादूनि प्रसन्नानि सुभगानि च स्रोतांसि प्रवाहान् कि न दर्शयति दर्शयत्येव । तथा दुर्वादिखण्डनादौ तन्मनोभ्रमणे च कर्कशतरवाग्वृत्तेरप्यस्य कवेर्नाटकविषये ललिता वाक् प्रसरतीति भावः ॥ १७ ॥
 </details>
 <details open><summary>मूलम् - १८</summary>
 
-नटी ( सानन्दम्) जुत्तं एव्व एदं वाहिदं अय्यस्स ।  
+नटी ( सानन्दम्) जुत्तं एव्व एदं वाहिदं अय्यस्स । 
 तह वि संतो णाम रसो णत्थित्ति गंधव्वाअमदेसिएहिं समत्थिज्जइ । ता एत्थ कहं तारिसस्स रसस्स णिवेसो ?
 
 ( युक्तमेवैतत् व्याहृतमार्यस्य । तथापि शान्तो नाम रसो नाम्तीति गन्धर्वागमदेशिकैः समर्थ्यते । तस्मादत्र कथं तादृशस्य रसम्य निवेशः १)
 
 सूत्रधारः -- (सावज्ञावहित्थम्) आर्ये, न खलु संभावयामि
 
-तानहं भरतमतपारदृश्वनः । (विमृश्य )  
+तानहं भरतमतपारदृश्वनः । (विमृश्य ) 
 अथवा तादृशान् सभ्यान् मत्वा जगति दुर्लभान् ।
 
 शङ्के शान्तिरसोल्लासमशक्यम[^46]भिमेनिरे ॥ १८ ॥
@@ -974,36 +993,28 @@ X२३
 
 <details><summary>प्रभावलिः - १८</summary>
 
-सानन्दम् ; संशयोच्छेदात् । जुत्तं एव्व--- युक्तमेव । एवं वाहितं- एतद्व्याहृतम् । अय्यस्स - आर्यस्य | सहवि - तथापि । संतो णाम रसो  
-शान्तो नाम रसः । णत्थित्ति--नास्तीति । गंधव्वा अमदेसिएहिं ; गन्धर्वागम- देशिकैः भरतमताचार्यैः । समत्थिज्जइ -- समर्थ्यते । ता - तस्मात् । एत्थ - अत्र | कहं कथम् । नाग्सिम्म - तादृशस्य | रसस्स - रसस्य । णिवेसो- निवेशः । मावज्ञावहित्यमाह । भग्नमताचार्यविषया अवज्ञा अनादरः । अवहित्था नढाकार गोपनम् | तत्सहितं यथा तथा । तान् शान्तरसाभाववादिनः भरतमताचार्यान् न गणयामि खलु । इदमवज्ञावचनम् । विमुश्य ; शान्तरसा-  
-आलोच्य । अथवेति तदाकारगोपवचनम् । तादृशान; शान्त- नू सभ्यान् जगति दुर्लभान् मत्वा शान्तिरसाभिनय मशक्यतया इति शङ्के विचारयामि । न तु वस्तुतः शान्तिरसाभावादित्यर्थः ॥ १८ ॥
+सानन्दम् ; संशयोच्छेदात् । जुत्तं एव्व--- युक्तमेव । एवं वाहितं- एतद्व्याहृतम् । अय्यस्स - आर्यस्य | सहवि - तथापि । संतो णाम रसो 
+शान्तो नाम रसः । णत्थित्ति--नास्तीति । गंधव्वा अमदेसिएहिं ; गन्धर्वागम- देशिकैः भरतमताचार्यैः । समत्थिज्जइ -- समर्थ्यते । ता - तस्मात् । एत्थ - अत्र | कहं कथम् । नाग्सिम्म - तादृशस्य | रसस्स - रसस्य । णिवेसो- निवेशः । मावज्ञावहित्यमाह । भग्नमताचार्यविषया अवज्ञा अनादरः । अवहित्था नढाकार गोपनम् | तत्सहितं यथा तथा । तान् शान्तरसाभाववादिनः भरतमताचार्यान् न गणयामि खलु । इदमवज्ञावचनम् । विमृश्य ; शान्तरसा- 
+आलोच्य । अथवेति तदाकारगोपवचनम् । तादृशान्; शान्त- न् सभ्यान् जगति दुर्लभान् मत्वा शान्तिरसाभिनय मशक्यतया इति शङ्के विचारयामि । न तु वस्तुतः शान्तिरसाभावादित्यर्थः ॥ १८ ॥
 </details>
 
 
 <details><summary>प्रभाविलासः - १८</summary>
 
-द्वितीयस्योत्तरमाह--- गम्भीरेति । स्रोतांसीति बहुवचनन  
-सा तत्र पतिता दिक्षु चतुर्धा प्रतिपद्यते ।
+इति गन्धर्वागमे -
 
-सीता चालकनन्दा च वङ्क्षुर्भद्रेति वै क्रमात् ॥
-
-"
-
-इति श्रीविष्णुपुराणोक्तिः स्मारिता । एवं प्रश्नोत्तरपरंपरारूपमुद्धात्यकं नाम वीथ्यङ्गमुक्तम् । तदुक्तं विद्यानाथेन -
-
-वीथ्यङ्गान्यामुखाङ्गत्वादुच्यन्तेऽत्र स्वभावतः । उद्घात्य कावलगिने प्रपञ्चत्रिगते छलम् ॥
-
-वाक्केत्यधिबले गण्डमवस्यन्दितनालिके । असत्प्रलापव्याहारमृदवानि त्रयोदश ॥  
-इति । गन्धर्वागमे -
 
 ..
 
-शान्तम्य शमसाध्यत्वान्नटे च तदसंभवात् । अप्रावव रसा नाटयेष्विति केचिदचूचुदन् ॥ "
 
-इत्यादि । अवज्ञा ; शान्तरसा नास्तीति श्रवणकृता । अवहित्था ; भरता- चार्यैरुक्तमित्यवज्ञागोपनम् । " अवहित्था कारगुप्तिः" इत्यमरः । एवमन्यो- न्यवाक्याधिक्यरूपमधिबलं नामामुखाङ्गमुक्तम् । आकारगोपन फलमाह -  
+शान्तम्य शमसाध्यत्वान्नटे च तदसंभवात् । 
+अष्टावेव रसा नाटयेष्विति केचिदचूचुदन् ॥ "
+
+
+इत्यादि । अवज्ञा ; शान्तरसा नास्तीति श्रवणकृता । अवहित्था ; भरता- चार्यैरुक्तमित्यवज्ञागोपनम् । " अवहित्था कारगुप्तिः" इत्यमरः । एवमन्यो- न्यवाक्याधिक्यरूपमधिबलं नामामुखाङ्गमुक्तम् । आकारगोपन फलमाह - 
 । तादृशान् ; शान्तरसनिष्ठान् । दुर्लभान् मत्वेत्यनेन "नटे च " इति विवृतम् । कुत एतदवगम्यतेः प्रकरणादिति ब्रूमः
 
-त्रिव-
+तत्रैव-
 
 " शृङ्गारवीरकरुणा रौद्रहास्यभयानकाः ।
 
@@ -1011,6 +1022,7 @@ X२३
 
 शान्तरसस्य विभावादिकथनाच्च । अनेन श्लोकेन रसवशादुक्ता- नरूपमवलगितं नामामुखाङ्गमुक्तम् ॥ १८ ॥
 </details>
+
 <details open><summary>मूलम् - १९</summary>
 
 [^47]अपि च ; ;
@@ -4360,9 +4372,6 @@ X१८४
 
 <details><summary>प्रभाविलासः - ९३</summary>
 
-"
-
-;  
 पर इति । परः; उत्कृष्टः ।
 
 X१८५
