--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -302,7 +302,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 लक्ष्ये यत्र श्रुति-मित-गुणाकृष्टि-लब्धावधानैः  
 प्रत्यग्-बाणः प्रणव-धनुषा सत्त्व-वद्भिः प्रयुक्तः ।  
-मध्ये-वक्षः **स्फुरति** महसा पत्रलः कौस्तुभात्मा  
+मध्ये-वक्षः **स्फुरति** महसा +++(गरुडगत्या)+++ पत्र-लः +++(जीवाधिदैवत-)+++कौस्तुभात्मा  
 पद्मा-कान्तः स **भवतु** दया-दुग्ध-सिन्धुः श्रियै वः[^4] ॥ २ ॥+++(5)+++
 
 [^4]: नः: ---क,ग,छ
@@ -333,10 +333,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 **धानैः** ; श्रुतिषु मिताना प्रतिपन्नाना गुणाना ज्ञानशक्तिकरुणादीनामाकृष्टिराकर्षण- मुपसंहारः, तत्र लब्धावधानैः प्राप्तैकाय्यैः । अन्यत्र श्रोत्रपर्यन्तज्याकर्षणे लब्धाभ्यासैः । **सत्त्ववद्भिः** ; सत्वगुणवद्भिः, सात्त्विकैरिति यावत् । अन्यत्र बल- वद्भिः । **प्रणवधनुषा** ; प्रणवस्य धनुष्टुरूपणं मार्गणसमर्पण **साधनत्वात्** ; " ओमित्यात्मानं युञ्जीत " इति हि श्रुतिः । युञ्जीत समर्पयेदित्यर्थः । **प्रयुक्तः** ; प्रकर्षेण समर्पितः । युञ्जीतेति श्रुतिसूचनायात्र युजिधातुप्रयोगः । प्रशब्देनात्र  
 महाविश्वासो गम्यते । **प्रत्यग्बाणः** ; प्रत्यगात्मा बाण इव, जीवात्मरूपो बाणः ।
 
-। प्रत्यक्त्वं स्वस्मै स्वयं भासमानत्वम् । प्रत्यगात्मनो बाणत्वेन रूपणं भगवति समर्प्यमाणत्वात् । **मध्येवक्षः** ; वक्षसो मध्ये लक्ष्यभूतब्रह्मणो वक्षसीत्यर्थः । **महसा** ; कौस्तुभकान्त्या । **पत्रलः** ; कङ्क-पत्रवान् । **कौस्तुभात्मा** ; कौस्तुभ आत्मा स्वरूपं यस्य, कौस्तुभस्य जीवात्माधिदेवतात्वात् । अन्यत्र कौस्तुभस्यात्मे-
-
-।  
-वात्मा यस्य । तेन लोहितत्वमुक्तं भवति । **स्फुरति** ; सदोज्ज्वलो वर्तते । दयैव दुग्धं **पयः** ; तस्य सिन्धुत्वरूपणेनापारत्वं गम्यते । स **पद्माकान्तः** ; अनेन प्रपत्तिविषयो भगवान् श्रियः पतिरेवेति सूचितम् । वः **श्रियै** ; एतत्प्रबन्धस्य पठने श्रवणे च प्रवृत्ताना वः ऐहिकामुष्मिकरूपसर्वसंपत्समृद्ध्यै भवत्वित्याशीर्वादः ॥ २ ॥
+। प्रत्यक्त्वं स्वस्मै स्वयं भासमानत्वम् । प्रत्यगात्मनो बाणत्वेन रूपणं भगवति समर्प्यमाणत्वात् । **मध्येवक्षः** ; वक्षसो मध्ये लक्ष्यभूतब्रह्मणो वक्षसीत्यर्थः । **महसा** ; कौस्तुभकान्त्या । **पत्रलः** ; कङ्क-पत्रवान् । **कौस्तुभात्मा** ; कौस्तुभ आत्मा स्वरूपं यस्य, कौस्तुभस्य जीवात्माधिदेवतात्वात् । अन्यत्र कौस्तुभस्यात्मेवात्मा यस्य । तेन लोहितत्वम् उक्तं भवति । **स्फुरति** ; सदोज्ज्वलो वर्तते । दयैव दुग्धं **पयः** ; तस्य सिन्धुत्वरूपणेनापारत्वं गम्यते । स **पद्माकान्तः** ; अनेन प्रपत्तिविषयो भगवान् श्रियः पतिरेवेति सूचितम् । वः **श्रियै** ; एतत्प्रबन्धस्य पठने श्रवणे च प्रवृत्ताना वः ऐहिकामुष्मिकरूपसर्वसंपत्समृद्ध्यै भवत्वित्याशीर्वादः ॥ २ ॥
 </details>
 
 <details><summary>प्रभाविलासः - २</summary>
@@ -348,9 +345,13 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 धीयते । यत्र **लक्ष्ये** ; शरव्ये " लक्षं लक्ष्यं शरव्यं च " इत्यमरः । श्रुतिषु वेदान्तेषु मिताः प्रमिता गुणाः सर्वज्ञत्वादयो यस्य स ईश्वरः, तस्या- कृष्टिराकर्षणं वशीकरणमिति यावत् तस्यां लब्धमवधानं कौशलं येषां तैः । अन्यत्र श्रुतिमितं **श्रवणपर्यन्तम्** ; " वेदे श्रवसि च श्रुतिः "
 
 "  
-इत्यमरः । गुणस्य मौर्या आकृष्टावाकर्षणे लब्धावधानैः । **प्रत्यग्बाणः** ; प्रत्यगात्मैव बाणः, समर्प्यमाणपदार्थ इति यावत् । अन्यत्र पूजितो बाणः । अञ्चु गतिपूजनयोः " इति धातुः । **प्रणवधनुषा** ; प्रणव एव धनुः समर्पण साधनं तेन । साधनत्वं चास्यानुष्ठेयार्थप्रकाशकत्वात् " ब्रह्मणे त्वा महस ओमित्यात्मानं युञ्जीत " इति प्रथनलवनादिवन्मन्त्र- रूपत्वात् । अन्यत्राभिनवधनुषा दृढेनेति यावत् । **सत्त्ववद्भिः** ; सात्त्विकैः बलवद्भिश्च । **महसा** ; धर्मभूतज्ञानेन । **पत्रलः** ; व्यापनशीलः । अन्यत्र महसा तेजसा युक्तः । पत्रः पत्रवान् । **कौस्तुभात्मा** ; कौस्तुभस्व- रूपः । अन्यत्र वज्रमयः । पद्माकान्त इति मन्त्ररत्नोक्त श्रीमच्छब्दार्थो विवृतः । अनेन रक्षकत्वसामर्थ्यं प्रतीतम् । अथ श्रीसंबन्धोत्तेजितं सानु- क्रोशत्वमाह – दयेति । तेन शरण्यत्वोपयुक्तगुणा उक्ताः, सानुक्रोशे समर्थे प्रपदनमृषिभिः स्मर्यतेऽभीष्टसिद्ध्यै " इत्युक्तत्वात् । दुग्धसिन्धु- रिति निरतिशयभोग्यत्वं व्यज्यते । **श्रियै** ; " सा हि श्रीरमृता सताम । इत्युक्तत्रय्यन्तसारभूतपुरुषार्थाय । अत्र
+इत्यमरः । गुणस्य मौर्या आकृष्टावाकर्षणे लब्धावधानैः । **प्रत्यग्बाणः** ; प्रत्यगात्मैव बाणः, समर्प्यमाणपदार्थ इति यावत् । अन्यत्र पूजितो बाणः । अञ्चु गतिपूजनयोः " इति धातुः । **प्रणवधनुषा** ; प्रणव एव धनुः समर्पण साधनं तेन । साधनत्वं चास्यानुष्ठेयार्थप्रकाशकत्वात् " ब्रह्मणे त्वा महस ओमित्यात्मानं युञ्जीत " इति प्रथनलवनादिवन्मन्त्र- रूपत्वात् । अन्यत्राभिनवधनुषा दृढेनेति यावत् । **सत्त्ववद्भिः** ; सात्त्विकैः बलवद्भिश्च । **महसा** ; धर्मभूतज्ञानेन । **पत्रलः** ; व्यापनशीलः । अन्यत्र महसा तेजसा युक्तः । पत्रः पत्रवान् । **कौस्तुभात्मा** ; कौस्तुभस्व- रूपः । अन्यत्र वज्रमयः । पद्माकान्त इति मन्त्ररत्नोक्त श्रीमच्छब्दार्थो विवृतः । अनेन रक्षकत्वसामर्थ्यं प्रतीतम् । अथ श्रीसंबन्धोत्तेजितं सानु- क्रोशत्वमाह – दयेति । तेन शरण्यत्वोपयुक्तगुणा उक्ताः, सानुक्रोशे समर्थे प्रपदनमृषिभिः स्मर्यतेऽभीष्टसिद्ध्यै " इत्युक्तत्वात् । दुग्धसिन्धु- रिति निरतिशयभोग्यत्वं व्यज्यते । **श्रियै** ; " सा हि श्रीरमृता सताम् । इत्युक्तत्रय्यन्तसारभूतपुरुषार्थाय । अत्र
 
-" प्रणवो धनुः शरो ह्यात्मा ब्रह्म तल्लक्ष्यमुच्यते । अप्रमत्तेन वेद्धव्यं शरवत्तन्मयो भवेत् ॥ "  
+> " प्रणवो **धनुः**, **शरो** ह्य् आत्मा,  
+> ब्रह्म **तल्-लक्ष्यम्** उच्यते ।  
+> अप्रमत्तेन वेद्धव्यं  
+> शरवत् तन्मयो भवेत् ॥ "+++(5)+++  
+
 इति श्रुत्यर्थोऽभिप्रेतः । तन्मय इति तदपृथक्सिद्धत्वम्, तत्साम्या-
 
 पत्तिरिति यावत् ।
@@ -363,8 +364,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 तदुक्तम् -
 
-'नान्दीश्लोको विधातव्यश्चन्द्रनामाङ्क एव सः ।
-
+'नान्दीश्लोको विधातव्यश्चन्द्रनामाङ्क एव सः ।  
 अतो हि चन्द्रसंबन्धो लक्ष्यते व्यज्यतेऽथवा ॥
 
 इति । श्लेषानुप्राणितो रूपकालंकारभेदः । पाञ्चाली रीतिः ॥ २ ॥
@@ -376,7 +376,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 (नान्द्यन्ते)
 
-सूत्रधारः - आदिष्टोऽस्मि निखिलसुरासुरकोटीरकोटिमणिकिरण[^5][^6] 'नि- करनीराजितपादपीठस्य[^7] शरणागतपरित्राणसप्ततन्तुदीक्षितस्य सरसी-  
+सूत्रधारः - आदिष्टो ऽस्मि निखिल-सुरासुर-कोटीर+++(=किरीट)+++-कोटि-मणि-किरण[^5][^6] 'नि- करनीराजितपादपीठस्य[^7] शरणागतपरित्राणसप्ततन्तुदीक्षितस्य सरसी-  
 रुहवासिनीसहचरितधर्मणः संसरणदवदहनतापनिर्वापण 'महाबलाहकस्य[^8] सर्वेश्वरस्य भगवतः श्रीरङ्गवृषगिरिसत्यव्रतयदुगिरिपृरुषोत्तम- पाण्डुरङ्गप्रभृतिषु दिव्याभिव्यक्तिदेशेषु यथाभिमतयात्रोत्सव सेवाहे- वाकविहितगतागतचटुल'[^9] चरणनलिन धूलीपटलपवित्रितक्ष्मातलैः, यदृच्छया मरुद्वृधान्तरीपमध्यमध्यासीनैः,[^10] शेषशेषाशनगरुडनिर्विशेषैः,  
 अशेषजनसंभावनीयैः, असंभवदवद्यगन्धैः, अभिजनविद्या 'समुचित-[^11] सदाचारशीलशालिभिः, अनादिमायामहावर्तबम्भ्रम्यमाणबाह्य'[^12] क- थकरम्भावनमथनगन्धसिन्धुरैः, अधिजिगमिषितमुक्तिघण्टापथैः,  
 X१६
